--- a/templates/edit_facilitator_profile.html
+++ b/templates/edit_facilitator_profile.html
@@ -15,7 +15,10 @@
     <div class="profile-header">
         <a href="{{ url_for('facilitator.profile') }}" class="back-button">Back to Profile</a>
         <div class="profile-header-right">
-            <h1 class="profile-title">Edit Profile</h1>
+            <h1 class="profile-title">
+                <span class="material-icons">edit</span>
+                Edit Profile
+            </h1>
         </div>
     </div>
 
