--- a/templates/facilitator_profile.html
+++ b/templates/facilitator_profile.html
@@ -15,7 +15,10 @@
     <div class="profile-header">
         <a href="{{ url_for('facilitator.dashboard') }}" class="back-button">Back to Dashboard</a>
         <div class="profile-header-right">
-            <h1 class="profile-title">Profile</h1>
+            <h1 class="profile-title">
+                <span class="material-icons">person</span>
+                Profile
+            </h1>
         </div>
     </div>
 
@@ -29,7 +32,9 @@
             </div>
 
             <div class="profile-content">
-                <div class="profile-avatar">👤</div>
+                <div class="profile-avatar">
+                    <span class="material-icons">account_circle</span>
+                </div>
                 
                 <div class="profile-info">
                     <!-- Left Column -->
