Changed Facilitator Dahsboard - Unavailability tab's title

--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -68,7 +68,7 @@
         </a>
         <a href="#unavailability" class="dashboard-nav-item" id="unavailability-nav">
             <span class="material-icons" aria-hidden="true">event_busy</span>
-            <span>Unavailability & Other Information</span>
+            <span>Unavailability</span>
         </a>
         <a href="#schedule" class="dashboard-nav-item" id="schedule-nav">
             <span class="material-icons" aria-hidden="true">calendar_today</span>
