--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -1,3 +1,4 @@
+<!-- HTML Template with Jinja2 syntax -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1098,6 +1099,8 @@
 
         </div>
       </div>
+      </div> <!-- Close uc-tabs-wrap -->
+      </div> <!-- Close w-full max-w-5xl -->
     {% endif %}
   </main>
 
