--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -581,6 +581,9 @@
               </div>
             </div>
             <div class="facilitator-actions">
+              <a href="{{ url_for('admin.facilitator_profile', facilitator_id=facilitator.id) }}" class="action-btn view" title="View Profile">
+                <span class="material-icons">visibility</span>
+              </a>
               <button class="action-btn edit" title="Edit">
                 <span class="material-icons">edit</span>
               </button>
